<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_traindetail_pro"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signature_pro_name"
        android:textColor="@color/content"
        android:layout_marginLeft="8dp"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_item_traindetail_testcount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signature_test_count"
        android:textColor="@color/content"
        android:layout_marginLeft="32dp"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_item_traindetail_passcount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signature_pass_count"
        android:layout_marginLeft="10dp"
        android:textColor="@color/content"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_item_traindetail_passnum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signature_pass_rate"
        android:textColor="@color/content"
        android:layout_marginLeft="-2dp"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_item_traindetail_averagespeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signature_average_speed"
        android:textColor="@color/content"
        android:layout_marginLeft="-15dp"
        android:textSize="@dimen/font_16" />

</LinearLayout>
