<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.hongjitech.vehicle.activity.AssessActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:paddingLeft="13dp"
        android:textSize="@dimen/font_30"
        android:text="@string/title_main"
        android:textColor="@color/greay" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:stretchColumns="*">

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_38"
                        android:background="@color/blue"
                        android:gravity="center_vertical"
                        android:paddingLeft="13dp"
                        android:text="@string/exam_info"
                        android:textColor="@color/greay"
                        android:textSize="@dimen/font_18" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="@dimen/height_125"
                            android:layout_height="@dimen/height_160"
                            android:layout_marginLeft="5dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/train_photo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/train_name"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/train_code"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_idCode"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/assess_examtime"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_examTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="用        时:"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_useTime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/exam_score_count"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_num"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="0"
                                    android:textColor="@color/red_exam"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="次"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/exam_long"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                                <TextView
                                    android:id="@+id/tv_assess_user_length"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="5dp"
                                    android:text="0m"
                                    android:textColor="@color/content"
                                    android:textSize="@dimen/font_16" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_38"
                        android:background="@color/blue">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="30dp"
                            android:text="@string/exam_mark_pro"
                            android:textColor="@color/greay"
                            android:textSize="@dimen/font_18" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/exam_marking"
                            android:textColor="@color/greay"
                            android:textSize="@dimen/font_18" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="45dp"
                            android:text="@string/exam_mark_res"
                            android:textColor="@color/greay"
                            android:textSize="@dimen/font_18" />

                    </RelativeLayout>

                    <ListView
                        android:id="@+id/lv_assess_info"
                        android:layout_width="match_parent"
                        android:layout_height="380dp"
                        android:listSelector="@android:color/transparent"
                        android:divider="@android:color/darker_gray"></ListView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_38"
                        android:background="@color/blue"
                        android:gravity="center_vertical"
                        android:paddingLeft="13dp"
                        android:text="@string/assess_result"
                        android:textColor="@color/greay"
                        android:textSize="@dimen/font_18" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_assess_img_enjoy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/assess_fail" />

                        <TextView
                            android:id="@+id/tv_assess_text_enjoy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/assess_sorry"
                            android:textColor="@color/red_fail"
                            android:textSize="@dimen/font_16" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_assess_return"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/assess_return" />

                        <ImageView
                            android:id="@+id/iv_assess_commend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/assess_while"
                            android:layout_marginLeft="50dp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_assess_over"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:src="@drawable/assess_over"
                        android:layout_marginTop="30dp" />

                </LinearLayout>

            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>
