<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <ImageButton
            android:id="@+id/ib_dialog_artPoi_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@drawable/art_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/art_mark"
            android:textColor="@color/greay"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/greay"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_dialog_artPoi_intoPro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/art_mark_pro"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_dialog_artPoi_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_dialog_artPoi_intoPro"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:src="@drawable/art_into" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greny_cc"></View>

        <RelativeLayout
            android:id="@+id/rl_dialog_artPoi_intoCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/art_mark_code"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_dialog_artPoi_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_dialog_artPoi_intoCode"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:src="@drawable/art_into" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greny_cc"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/art_mark_fraction"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tv_dialog_artPoi_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/content"
                    android:textSize="@dimen/font_16" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greny_cc"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_dialog_artPoi_markPro"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@null"
                android:gravity="left"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="8"
                android:scrollbars="vertical"
                android:textColor="@color/content"
                android:textSize="@dimen/font_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/art_mark_pro"
                android:textColor="@color/content"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_dialog_artPoi_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/art_exit" />

        <ImageView
            android:id="@+id/iv_dialog_artPoi_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:src="@drawable/art_sure" />

    </LinearLayout>

</LinearLayout>
